--- a/modelodeCaja/modelo de caja.html
+++ b/modelodeCaja/modelo de caja.html
@@ -5,6 +5,6 @@
 	<link href="dom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class = "margin"><div class = "outside"><div class = "inside"><p>Hola Mundo</p></div></div></div>
+    <div class = "outside"><div class = "inside"><p>Hola Mundo</p></div></div>
 </body>
 </html>
